--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
+    "@mantine/core": "^6.0.13",
+    "@mantine/dates": "^6.0.13",
+    "@mantine/form": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.8",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "firebase": "^9.22.2",
+    "formik": "^2.4.1",
+    "js-cookie": "3.0.5",
+    "moment": "^2.29.4",
     "next": "13.3.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2"
+    "react-toastify": "9.1.3",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.2.0"
   }
 }
